add nav bars to projects.html and teaching.html

--- a/about.html
+++ b/about.html
@@ -80,12 +80,12 @@
 			</div>
 		</header>
 
-		<div class="fh5co-hero" style="background-image: url(images/hero_4.jpg); height: 400px;">
+		<div class="fh5co-hero" style="background-image: url(images/hero_4.jpg); height: 500px;">
 			<div class="overlay"></div>
-			<div class="container" style="height: 400px;">
-				<div class="row" style="height: 400px;">
-					<div class="col-md-8 col-md-offset-2 col-sm-12 col-sm-offset-0 col-xs-12 col-xs-offset-0 text-center fh5co-table" style="height: 400px;">
-						<div class="fh5co-intro fh5co-table-cell" style="height: 400px;">
+			<div class="container" style="height: 500px;">
+				<div class="row" style="height: 500px;">
+					<div class="col-md-8 col-md-offset-2 col-sm-12 col-sm-offset-0 col-xs-12 col-xs-offset-0 text-center fh5co-table" style="height: 500px;">
+						<div class="fh5co-intro fh5co-table-cell" style="height: 500px;">
 							<h1 class="text-center">About Me</h1>
 							<!-- <p>Made with love by the fine folks at <a href="http://freehtml5.co">FreeHTML5.co</a></p> -->
 						</div>
@@ -291,6 +291,7 @@
 	<script src="js/jquery.stellar.min.js"></script>
 	<!-- MAIN JS -->
 	<script src="js/main.js"></script>
+	<!-- SMOOTH SCROLLING -->
 	<script>
 		// document.querySelector('#alec').scrollIntoView({behavior: 'smooth'});
 		$('a[href*=#]').click(function(event){
