--- a/index.html
+++ b/index.html
@@ -99,7 +99,8 @@
 			<div class="container">
 				<div class="row">
 					<div id="head_shot" class="col-sm-12 col-md-5 col-md-push-7">
-						<img src="images/head_shot_1.jpg" alt="" class="img-responsive">
+						<img src="images/head_shot_2.jpg" alt="" class="img-responsive">
+						<!-- style="max-width: 80%;" -->
 					</div>
 					<br>
 					<div class="col-sm-12 col-md-7 col-md-pull-5">
