--- a/teaching.html
+++ b/teaching.html
@@ -200,9 +200,9 @@
 			</div>
 		</div>
 
-		<div class="fh5co-section">
+		<div class="fh5co-section" id="past">
 			<div class="container">
-				<div class="row" id="past">
+				<div class="row">
 					<div class="col-sm-12 col-md-6">
 						<h3>University of Toronto (Summer 2017)</h3>
 						<ul class="list-unstyled"> <!-- class="fh5co-check" -->
@@ -341,7 +341,7 @@
 		// document.querySelector('#alec').scrollIntoView({behavior: 'smooth'});
 		$('a[href*=#]').click(function(event){
 		    $('html, body').animate({
-		        scrollTop: $( $.attr(this, 'href') ).offset().top - 40
+		        scrollTop: $( $.attr(this, 'href') ).offset().top - 20
 		    }, 500);
 		    event.preventDefault();
 		});
