add quiz 5 solutions

--- a/projects.html
+++ b/projects.html
@@ -89,7 +89,7 @@
 					<div class="col-md-8 col-md-push-2 col-sm-12 col-sm-offset-0 col-xs-12 col-xs-offset-0 text-center fh5co-table" style="height: 500px;">
 						<div class="fh5co-intro fh5co-table-cell" style="height: 500px;">
 							<h1 class="text-center">Machine Learning Projects</h1>
-							<p>These are some of the interesting ML projects that I've worked on. All of my projects can be found on <a href="https://github.com/andrewrosss">GitHub</a></p>
+							<p>These are some of the interesting ML projects that I've worked on over the last couple months. All of my projects can be found on <a href="#" onclick="window.open('https://github.com/andrewrosss'); return false;">GitHub</a></p>
 						</div>
 					</div>
 				</div>
