--- a/teaching.html
+++ b/teaching.html
@@ -88,8 +88,7 @@
 						<div class="fh5co-intro fh5co-table-cell" style="height: 500px;">
 						<!-- style="background-color: rgba(0, 0, 0, 0.3);" -->
 							<h1 class="text-center">Courses</h1>
-							<p>I am currently a teaching assistant at the University of Toronto</br>
-							Below are some materials for courses currently underway</p>
+							<p>I am currently a teaching assistant at the University of Toronto. Below are some materials for past and current courses.</p>
 						</div>
 					</div>
 				</div>
@@ -174,7 +173,10 @@
 								Assignment 5 Solutions
 							</li>
 							<li>
-								Quiz 5 Solutions (Ver. A, B, C)
+								Quiz 5 Solutions (Ver. 
+								<a href="assets/MAT344F_17/quiz5/version_a/MAT344_F17_Quiz5_VerA.pdf">A</a>, 
+								<a href="assets/MAT344F_17/quiz5/version_b/MAT344_F17_Quiz5_VerB.pdf">B</a>, 
+								<a href="assets/MAT344F_17/quiz5/version_c/MAT344_F17_Quiz5_VerC.pdf">C</a>)
 							</li>
 							<!--
 							<img src="images/hero_1.jpg" alt="Free HTML5 by FreeHTML5.co" class="img-responsive">
