--- a/flipthrough.html
+++ b/flipthrough.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html>
+<!-- https://andrewrosss.github.io/flipthrough.html -->
 <head>
 	<title></title>
 	<style>
 		body {background-color: powderblue;}
 		h1   {color: blue;}
 		p    {color: red;}
-		.parent {max-width: 100%; margin: 16px}
+		.parent {max-width: 100%; margin: 2em}
 		#child {
 		  width: 20%;
 		  margin: 0 auto;
@@ -15,6 +16,7 @@
 		  width: 100%;
 		  /*height: 400px;*/
 		  /*border: 1px solid black;*/
+		  margin-top: 2em;
 		  display: flex;
 		  align-items: center;
 		  justify-content: center;
