add responsive buttons (hover & active)

--- a/flipthrough.html
+++ b/flipthrough.html
@@ -44,6 +44,12 @@
 		    color: #555555;
 		    border: 2px solid #555555;
 		}
+		.button5:hover{
+		    background: white;
+		}
+		.button5:hover:active{
+		    background: gainsboro;
+		}
 		input[type=button] {
 		    width: 20em;  height: 6em;
 		}
