add gradual transition to color change in hover

--- a/flipthrough.html
+++ b/flipthrough.html
@@ -38,6 +38,8 @@
 		    margin: 4px 2px;
 		    cursor: pointer;
 		    border-radius: 8px;
+		    -webkit-transition-duration: 0.4s; /* Safari */
+		    transition-duration: 0.4s;
 		}
 		.button5 {
 		    background-color: powderblue;/*white;*/
