--- a/index~.html
+++ b/index~.html
@@ -69,12 +69,12 @@
 				    <div class="panel panel-default">
 
 				    	<!-- PANEL - HEADING -->
-				    	<a data-toggle="collapse" href="#collapse1">
+				    	<a class="panel-heading-link" data-toggle="collapse" href="#collapse1">
 					      	<div class="panel-heading">
 					        	<h2 class="panel-title">
 					          			<span class="glyphicon glyphicon-user"></span>About
 					        	</h2>
-				      	</div>
+				      		</div>
 				      	</a>
 				      	<!-- PANEL - BODY -->
 				    	<div id="collapse1" class="panel-collapse collapse in">
@@ -95,13 +95,13 @@
 				    <div class="panel panel-default">
 
 				    	<!-- PANEL - HEADING -->
-				      	<div class="panel-heading">
-				        	<h4 class="panel-title">
-				          		<a data-toggle="collapse" href="#collapse2">
+				    	<a class="panel-heading-link" data-toggle="collapse" href="#collapse2">
+					      	<div class="panel-heading">
+					        	<h4 class="panel-title">
 				          			<span class="glyphicon glyphicon-briefcase"></span>Experience
-				          		</a>
-				        	</h4>
-				      	</div>
+					        	</h4>
+					      	</div>
+					    </a>
 
 				      	<!-- PANEL - BODY -->
 				    	<div id="collapse2" class="panel-collapse collapse">
@@ -135,14 +135,14 @@
 				    <div class="panel panel-default">
 
 				    	<!-- PANEL - HEADING -->
-					    <div class="panel-heading">
-				        	<h4 class="panel-title">
-				          		<a data-toggle="collapse" href="#collapse3">
+				    	<a class="panel-heading-link" data-toggle="collapse" href="#collapse3">
+						    <div class="panel-heading">
+					        	<h4 class="panel-title">
 				          			<span class="glyphicon glyphicon-education"></span>Education
-				          		</a>
-				        	</h4>
-				      	</div>
-				      	
+					        	</h4>
+					      	</div>
+				      	</a>
+
 				      	<!-- PANEL - BODY -->
 				      	<div id="collapse3" class="panel-collapse collapse">
 				        	<div class="panel-body">
