add collapsible contact info panel

--- a/index~.html
+++ b/index~.html
@@ -41,7 +41,21 @@
 			<div class="col-sm-3">
 				<div class="section section-left">
 					<img class="head-shot" src="images/head_shot_2.jpg">
-					<div class="contact-info">
+					
+
+
+					<div class="panel-group">
+					    <div class="panel panel-default">
+					    <a class="panel-heading-link" data-toggle="collapse" href="#collapse-info">
+					      <div class="panel-heading">
+					        <h4 class="panel-title">
+					          Contact Info
+					        </h4>
+					      </div>
+					    </a>
+					      <div id="collapse-info" class="panel-collapse collapse in">
+					        <div class="panel-body">
+					        	<div class="contact-info">
 						<p class="p-contact">
 							<span class="fa fa-suitcase"></span>
 							Data Scientist
@@ -59,6 +73,13 @@
 							+1 (416) 904 0690
 						</p>
 					</div>
+					        </div>
+					        
+					      </div>
+					    </div>
+					  </div>
+
+
 				</div>
 			</div>
 
