--- a/resume~.html
+++ b/resume~.html
@@ -263,3 +263,23 @@
 						</p>
 					</div>
 				</div>
+
+
+				<div class="contact-info">
+						<p class="p-contact">
+							<span class="fa fa-suitcase"></span>
+							Data Scientist
+						</p>
+						<p class="p-contact">
+							<span class="fa fa-home"></span>
+							Toronto, ON, CA
+						</p>
+						<p class="p-contact">
+							<span class="fa fa-envelope"></span>
+							andrew.ross.mail@gmail.com
+						</p>
+						<p class="p-contact">
+							<span class="fa fa-phone"></span>
+							+1 (416) 904 0690
+						</p>
+					</div>
